--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -187,7 +187,10 @@ svg {
   justify-content: space-between;
   margin: 0 2vh;
 }
-.menu-mobile .mobile-input-header input {
+.menu-mobile .test {
+  display: flex;
+}
+.menu-mobile .test input {
   color: #333;
   width: 7vh;
   height: 5vh;
@@ -198,7 +201,7 @@ svg {
   border-radius: 50px;
   transition: all ease 0.8s;
 }
-.menu-mobile .mobile-input-header input:focus {
+.menu-mobile .test input:focus {
   border: 1px solid #cc392b;
   border-radius: 50px;
   width: 20vh;
@@ -347,18 +350,18 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
-.connexion {
+.connexion, .login {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-.connexion h1 {
+.connexion h1, .login h1 {
   font-family: var(--ff-bangers);
   letter-spacing: var(--letter-spacing);
   margin-bottom: 1.5rem;
 }
-.connexion input {
+.connexion input, .login input {
   display: flex;
   flex-direction: column;
   border-radius: 10px;
@@ -369,17 +372,17 @@ footer > p {
   height: 40px;
   margin-bottom: var(--mb-5);
 }
-.connexion input::-moz-placeholder {
+.connexion input::-moz-placeholder, .login input::-moz-placeholder {
   color: rgba(51, 51, 51, 0.4431372549);
   font-family: var(--ff-barlow);
   font-weight: 400;
 }
-.connexion input::placeholder {
+.connexion input::placeholder, .login input::placeholder {
   color: rgba(51, 51, 51, 0.4431372549);
   font-family: var(--ff-barlow);
   font-weight: 400;
 }
-.connexion .login {
+.connexion .loginregister, .login .loginregister {
   background-color: #cc392b;
   color: white;
   padding: 10px 60px;
@@ -389,97 +392,10 @@ footer > p {
   letter-spacing: var(--letter-spacing);
   transition: all ease 0.3s;
 }
-.connexion .login:hover {
+.connexion .loginregister:hover, .login .loginregister:hover {
   background-color: #cc1606;
 }
-.connexion button.togglePassword {
-  padding: 5px 10px;
-  display: flex;
-  border: none;
-}
-
-#img-connexion {
-  display: none;
-}
-#img-connexion img {
-  max-width: 50%;
-}
-
-.password-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-.password-container input {
-  width: 100%;
-  padding-right: 40px;
-  height: 40px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  background-color: var(--fc-light);
-  padding: 10px;
-  color: black;
-  margin-bottom: var(--mb-5);
-}
-.password-container input::-moz-placeholder {
-  color: rgba(51, 51, 51, 0.4431372549);
-  font-family: var(--ff-barlow);
-  font-weight: 400;
-}
-.password-container input::placeholder {
-  color: rgba(51, 51, 51, 0.4431372549);
-  font-family: var(--ff-barlow);
-  font-weight: 400;
-}
-.password-container .togglePassword {
-  position: absolute;
-  right: 10px;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-.password-container .togglePassword img {
-  width: 3vh;
-  text-align: center;
-}
-
-.login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.login h1 {
-  font-family: var(--ff-bangers);
-  letter-spacing: var(--letter-spacing);
-  margin-bottom: 1.5rem;
-}
-.login input {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  background-color: var(--fc-light);
-  padding: 10px;
-  color: black;
-  border: 1px solid #ccc;
-  height: 40px;
-  margin-bottom: var(--mb-5);
-}
-.login input::-moz-placeholder {
-  color: rgba(51, 51, 51, 0.4431372549);
-  font-family: var(--ff-barlow);
-  font-weight: 400;
-}
-.login input::placeholder {
-  color: rgba(51, 51, 51, 0.4431372549);
-  font-family: var(--ff-barlow);
-  font-weight: 400;
-}
-.login .login {
+.connexion .loginconnexion, .login .loginconnexion {
   background-color: #cc392b;
   color: white;
   padding: 10px 60px;
@@ -489,10 +405,10 @@ footer > p {
   letter-spacing: var(--letter-spacing);
   transition: all ease 0.3s;
 }
-.login .login:hover {
+.connexion .loginconnexion:hover, .login .loginconnexion:hover {
   background-color: #cc1606;
 }
-.login button.togglePassword {
+.connexion button.togglePassword, .login button.togglePassword {
   padding: 5px 10px;
   display: flex;
   border: none;
@@ -552,120 +468,114 @@ footer > p {
 *************REGISTER*************
 **********************************
 */
-.connexion {
+main.connexion, main.login {
   /* Cloud Objects */
   /* KEYFRAMES */
   /* Responsive media query */
 }
-.connexion #img-subscrire {
+main.connexion #img-subscrire, main.login #img-subscrire {
   max-width: 90%;
   display: none;
 }
-.connexion .form-container {
+main.connexion .form-container, main.login .form-container {
+  position: relative;
+  z-index: 9999;
   opacity: 0;
   /* Initialement invisible */
   transform: translateY(50px);
   /* Position initiale en dehors de l'écran */
 }
-.connexion .form-container input,
-.connexion .form-container button {
+main.connexion .form-container input,
+main.connexion .form-container button, main.login .form-container input,
+main.login .form-container button {
   opacity: 0;
   /* Initialement invisible */
   transform: translateY(20px);
   /* Position initiale en dehors de l'écran */
 }
-.connexion #img-subscrire {
+main.connexion #img-subscrire, main.login #img-subscrire {
   opacity: 0;
   /* Initialement invisible */
   transform: translateY(50px);
   /* Position initiale en dehors de l'écran */
 }
-.connexion .connexion {
-  background: #ade5f5;
-  color: #333;
-  font: 100% Arial, Sans Serif;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-.connexion .cloud-content {
+main.connexion .cloud-content, main.login .cloud-content {
   bottom: 0;
   left: 0;
   padding-top: 50px;
   position: fixed;
   right: 0;
   top: 0;
-  z-index: -1;
+  z-index: -999;
 }
-.connexion .cloud-block {
+main.connexion .cloud-block, main.login .cloud-block {
   position: absolute;
   opacity: 0.8;
 }
-.connexion .cloud-1 {
+main.connexion .cloud-1, main.login .cloud-1 {
   top: 50px;
 }
-.connexion .cloud-2 {
+main.connexion .cloud-2, main.login .cloud-2 {
   top: 40vh;
 }
-.connexion .cloud-3 {
+main.connexion .cloud-3, main.login .cloud-3 {
   top: 20vh;
 }
-.connexion .cloud-4 {
+main.connexion .cloud-4, main.login .cloud-4 {
   top: 40vh;
 }
-.connexion .cloud-5 {
+main.connexion .cloud-5, main.login .cloud-5 {
   top: 65vh;
 }
-.connexion .cloud-6 {
+main.connexion .cloud-6, main.login .cloud-6 {
   top: 35vh;
 }
-.connexion .cloud-7 {
+main.connexion .cloud-7, main.login .cloud-7 {
   bottom: 30px;
 }
-.connexion .cloud-1 {
+main.connexion .cloud-1, main.login .cloud-1 {
   animation: animate-1 32s linear infinite;
   -webkit-animation: animate-1 32s linear infinite;
   transform: scale(0.65);
   -webkit-transform: scale(0.65);
 }
-.connexion .cloud-2 {
+main.connexion .cloud-2, main.login .cloud-2 {
   animation: animate-2 37s linear infinite;
   -webkit-animation: animate-2 37s linear infinite;
   transform: scale(0.45);
   -webkit-transform: scale(0.45);
 }
-.connexion .cloud-3 {
+main.connexion .cloud-3, main.login .cloud-3 {
   animation: animate-3 45s linear infinite;
   -webkit-animation: animate-3 45s linear infinite;
   transform: scale(0.5);
   -webkit-transform: scale(0.5);
 }
-.connexion .cloud-4 {
+main.connexion .cloud-4, main.login .cloud-4 {
   animation: animate-4 50s linear infinite;
   -webkit-animation: animate-4 50s linear infinite;
   transform: scale(0.4);
   -webkit-transform: scale(0.4);
 }
-.connexion .cloud-5 {
+main.connexion .cloud-5, main.login .cloud-5 {
   animation: animate-5 55s linear infinite;
   -webkit-animation: animate-5 55s linear infinite;
   transform: scale(0.55);
   -webkit-transform: scale(0.55);
 }
-.connexion .cloud-6 {
+main.connexion .cloud-6, main.login .cloud-6 {
   animation: animate-6 60s linear infinite;
   -webkit-animation: animate-6 60s linear infinite;
   transform: scale(0.45);
   -webkit-transform: scale(0.45);
 }
-.connexion .cloud-7 {
+main.connexion .cloud-7, main.login .cloud-7 {
   animation: animate-7 65s linear infinite;
   -webkit-animation: animate-7 65s linear infinite;
   transform: scale(0.5);
   -webkit-transform: scale(0.5);
 }
-.connexion .cloud {
+main.connexion .cloud, main.login .cloud {
   width: 350px;
   height: 120px;
   border-radius: 100px;
@@ -674,21 +584,22 @@ footer > p {
   position: relative;
   background: #fff;
 }
-.connexion .cloud:after,
-.connexion .cloud:before {
+main.connexion .cloud:after,
+main.connexion .cloud:before, main.login .cloud:after,
+main.login .cloud:before {
   background: #fff;
   content: "";
   position: absolute;
   z-index: -1;
 }
-.connexion .cloud:after {
+main.connexion .cloud:after, main.login .cloud:after {
   width: 100px;
   height: 100px;
   left: 50px;
   top: -50px;
   border-radius: 100px;
 }
-.connexion .cloud:before {
+main.connexion .cloud:before, main.login .cloud:before {
   width: 180px;
   height: 180px;
   right: 50px;
@@ -791,11 +702,11 @@ footer > p {
   }
 }
 @media screen and (max-width: 767px) {
-  .connexion .cloud {
+  main.connexion .cloud, main.login .cloud {
     width: 300px;
     height: 70px;
   }
-  .connexion .cloud:before {
+  main.connexion .cloud:before, main.login .cloud:before {
     width: 120px;
     height: 120px;
     top: -80px;
@@ -1414,7 +1325,7 @@ div.mangaPage svg.liked {
 }
 .head-profile div:first-child figure .change-picture {
   color: var(--fc-black);
-  background-color: #f2ebe8;
+  background-color: #F2EBE8;
 }
 .head-profile div:first-child figure .change-picture:hover {
   background-color: #fcc8e1;
@@ -2423,20 +2334,12 @@ button:hover {
   /* Afficher lorsque actif */
 }
 .dashboard .kakkoii center {
-  max-width: 600px;
-  /* Réduire la largeur maximale */
-  padding: 20px;
-  /* Ajuster le padding si nécessaire */
-  margin: 20px auto;
-  /* Centrer les éléments */
+  max-width: 600px; /* Réduire la largeur maximale */
+  padding: 20px; /* Ajuster le padding si nécessaire */
+  margin: 20px auto; /* Centrer les éléments */
   background-color: #cc1606;
 }
 
-/*
-**********************************
-***********kKAKOII MODE************
-**********************************
-*/
 .headkakkoii {
   height: 30vh;
   background: url(../img/kakoii.svg) no-repeat center center/cover;
@@ -2566,8 +2469,7 @@ button:hover {
 **********************************
 */
 .kakkoii .popup {
-  display: none;
-  /* Masquer par défaut */
+  display: none; /* Masquer par défaut */
   position: fixed;
   left: 50%;
   top: 50%;
@@ -2580,8 +2482,7 @@ button:hover {
   border-radius: 10px;
 }
 .kakkoii .overlay {
-  display: none;
-  /* Masquer par défaut */
+  display: none; /* Masquer par défaut */
   position: fixed;
   top: 0;
   left: 0;
@@ -2592,8 +2493,7 @@ button:hover {
 }
 .kakkoii .popup.active,
 .kakkoii .overlay.active {
-  display: block;
-  /* Afficher lorsque actif */
+  display: block; /* Afficher lorsque actif */
 }
 .kakkoii .flex {
   display: flex;
