--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2108,6 +2108,8 @@ button:hover {
 }
 .headkakkoii {
 width: 100%;
+height: auto;
+ 
 }
 .kakkoii{
     width: 70vh; 
@@ -2769,10 +2771,10 @@ align-items: center;
     font-size: 1rem;
     color: #f0f0f0;
     text-shadow: 
-                -2px -2px 0 red,  
-                2px -2px 0 red,
-                -2px 2px 0 red,
-                2px 2px 0 red;
+                -1px -1px 0 red,  
+                1px -1px 0 red,
+                -1px 1px 0 red,
+                1px 1px 0 red;
   }
   .center{
     text-align: center;
@@ -2782,7 +2784,7 @@ align-items: center;
     margin: 20px auto;
 
     h2 {
-      color: red;
+      color: #0555EB;
       font-family: var(--ff-bangers);
       letter-spacing: var(--letter-spacing);
       font-size: 1rem;
@@ -2808,8 +2810,23 @@ align-items: center;
         background-color: #cc1606;
 }
   }
+  
 }
-
+.close-popup{
+    background-color: #0555EB;
+    color: #0e0e0e;
+    font-family: var(--ff-bangers);
+    cursor: pointer;
+    transition: all ease 0.3s;
+    border-radius: 10px;
+    border: none;
+    padding: 20px;
+    margin: 10px;
+    &:hover{
+      background-color: #210be2;
+      text-align: center;
+    }
+  }
 /*
 **********************************
 ***********404********************
