--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -350,18 +350,21 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
-.connexion, .login {
+.connexion,
+.login {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-.connexion h1, .login h1 {
+.connexion h1,
+.login h1 {
   font-family: var(--ff-bangers);
   letter-spacing: var(--letter-spacing);
   margin-bottom: 1.5rem;
 }
-.connexion input, .login input {
+.connexion input,
+.login input {
   display: flex;
   flex-direction: column;
   border-radius: 10px;
@@ -377,12 +380,14 @@ footer > p {
   font-family: var(--ff-barlow);
   font-weight: 400;
 }
-.connexion input::placeholder, .login input::placeholder {
+.connexion input::placeholder,
+.login input::placeholder {
   color: rgba(51, 51, 51, 0.4431372549);
   font-family: var(--ff-barlow);
   font-weight: 400;
 }
-.connexion .loginregister, .login .loginregister {
+.connexion .loginregister,
+.login .loginregister {
   background-color: #cc392b;
   color: white;
   padding: 10px 60px;
@@ -392,10 +397,12 @@ footer > p {
   letter-spacing: var(--letter-spacing);
   transition: all ease 0.3s;
 }
-.connexion .loginregister:hover, .login .loginregister:hover {
+.connexion .loginregister:hover,
+.login .loginregister:hover {
   background-color: #cc1606;
 }
-.connexion .loginconnexion, .login .loginconnexion {
+.connexion .loginconnexion,
+.login .loginconnexion {
   background-color: #cc392b;
   color: white;
   padding: 10px 60px;
@@ -405,10 +412,12 @@ footer > p {
   letter-spacing: var(--letter-spacing);
   transition: all ease 0.3s;
 }
-.connexion .loginconnexion:hover, .login .loginconnexion:hover {
+.connexion .loginconnexion:hover,
+.login .loginconnexion:hover {
   background-color: #cc1606;
 }
-.connexion button.togglePassword, .login button.togglePassword {
+.connexion button.togglePassword,
+.login button.togglePassword {
   padding: 5px 10px;
   display: flex;
   border: none;
@@ -468,16 +477,19 @@ footer > p {
 *************REGISTER*************
 **********************************
 */
-main.connexion, main.login {
+main.connexion,
+main.login {
   /* Cloud Objects */
   /* KEYFRAMES */
   /* Responsive media query */
 }
-main.connexion #img-subscrire, main.login #img-subscrire {
+main.connexion #img-subscrire,
+main.login #img-subscrire {
   max-width: 90%;
   display: none;
 }
-main.connexion .form-container, main.login .form-container {
+main.connexion .form-container,
+main.login .form-container {
   position: relative;
   z-index: 9999;
   opacity: 0;
@@ -486,20 +498,23 @@ main.connexion .form-container, main.login .form-container {
   /* Position initiale en dehors de l'écran */
 }
 main.connexion .form-container input,
-main.connexion .form-container button, main.login .form-container input,
+main.connexion .form-container button,
+main.login .form-container input,
 main.login .form-container button {
   opacity: 0;
   /* Initialement invisible */
   transform: translateY(20px);
   /* Position initiale en dehors de l'écran */
 }
-main.connexion #img-subscrire, main.login #img-subscrire {
+main.connexion #img-subscrire,
+main.login #img-subscrire {
   opacity: 0;
   /* Initialement invisible */
   transform: translateY(50px);
   /* Position initiale en dehors de l'écran */
 }
-main.connexion .cloud-content, main.login .cloud-content {
+main.connexion .cloud-content,
+main.login .cloud-content {
   bottom: 0;
   left: 0;
   padding-top: 50px;
@@ -508,74 +523,90 @@ main.connexion .cloud-content, main.login .cloud-content {
   top: 0;
   z-index: -999;
 }
-main.connexion .cloud-block, main.login .cloud-block {
+main.connexion .cloud-block,
+main.login .cloud-block {
   position: absolute;
   opacity: 0.8;
 }
-main.connexion .cloud-1, main.login .cloud-1 {
+main.connexion .cloud-1,
+main.login .cloud-1 {
   top: 50px;
 }
-main.connexion .cloud-2, main.login .cloud-2 {
+main.connexion .cloud-2,
+main.login .cloud-2 {
   top: 40vh;
 }
-main.connexion .cloud-3, main.login .cloud-3 {
+main.connexion .cloud-3,
+main.login .cloud-3 {
   top: 20vh;
 }
-main.connexion .cloud-4, main.login .cloud-4 {
+main.connexion .cloud-4,
+main.login .cloud-4 {
   top: 40vh;
 }
-main.connexion .cloud-5, main.login .cloud-5 {
+main.connexion .cloud-5,
+main.login .cloud-5 {
   top: 65vh;
 }
-main.connexion .cloud-6, main.login .cloud-6 {
+main.connexion .cloud-6,
+main.login .cloud-6 {
   top: 35vh;
 }
-main.connexion .cloud-7, main.login .cloud-7 {
+main.connexion .cloud-7,
+main.login .cloud-7 {
   bottom: 30px;
 }
-main.connexion .cloud-1, main.login .cloud-1 {
+main.connexion .cloud-1,
+main.login .cloud-1 {
   animation: animate-1 32s linear infinite;
   -webkit-animation: animate-1 32s linear infinite;
   transform: scale(0.65);
   -webkit-transform: scale(0.65);
 }
-main.connexion .cloud-2, main.login .cloud-2 {
+main.connexion .cloud-2,
+main.login .cloud-2 {
   animation: animate-2 37s linear infinite;
   -webkit-animation: animate-2 37s linear infinite;
   transform: scale(0.45);
   -webkit-transform: scale(0.45);
 }
-main.connexion .cloud-3, main.login .cloud-3 {
+main.connexion .cloud-3,
+main.login .cloud-3 {
   animation: animate-3 45s linear infinite;
   -webkit-animation: animate-3 45s linear infinite;
   transform: scale(0.5);
   -webkit-transform: scale(0.5);
 }
-main.connexion .cloud-4, main.login .cloud-4 {
+main.connexion .cloud-4,
+main.login .cloud-4 {
   animation: animate-4 50s linear infinite;
   -webkit-animation: animate-4 50s linear infinite;
   transform: scale(0.4);
   -webkit-transform: scale(0.4);
 }
-main.connexion .cloud-5, main.login .cloud-5 {
+main.connexion .cloud-5,
+main.login .cloud-5 {
   animation: animate-5 55s linear infinite;
   -webkit-animation: animate-5 55s linear infinite;
   transform: scale(0.55);
   -webkit-transform: scale(0.55);
 }
-main.connexion .cloud-6, main.login .cloud-6 {
+main.connexion .cloud-6,
+main.login .cloud-6 {
   animation: animate-6 60s linear infinite;
   -webkit-animation: animate-6 60s linear infinite;
   transform: scale(0.45);
   -webkit-transform: scale(0.45);
 }
-main.connexion .cloud-7, main.login .cloud-7 {
+main.connexion .cloud-7,
+main.login .cloud-7 {
   animation: animate-7 65s linear infinite;
   -webkit-animation: animate-7 65s linear infinite;
   transform: scale(0.5);
   -webkit-transform: scale(0.5);
 }
-main.connexion .cloud, main.login .cloud {
+main.connexion .cloud,
+main.login .cloud {
   width: 350px;
   height: 120px;
   border-radius: 100px;
@@ -585,21 +616,24 @@ main.connexion .cloud, main.login .cloud {
   background: #fff;
 }
 main.connexion .cloud:after,
-main.connexion .cloud:before, main.login .cloud:after,
+main.connexion .cloud:before,
+main.login .cloud:after,
 main.login .cloud:before {
   background: #fff;
   content: "";
   position: absolute;
   z-index: -1;
 }
-main.connexion .cloud:after, main.login .cloud:after {
+main.connexion .cloud:after,
+main.login .cloud:after {
   width: 100px;
   height: 100px;
   left: 50px;
   top: -50px;
   border-radius: 100px;
 }
-main.connexion .cloud:before, main.login .cloud:before {
+main.connexion .cloud:before,
+main.login .cloud:before {
   width: 180px;
   height: 180px;
   right: 50px;
@@ -702,11 +736,13 @@ main.connexion .cloud:before, main.login .cloud:before {
   }
 }
 @media screen and (max-width: 767px) {
-  main.connexion .cloud, main.login .cloud {
+  main.connexion .cloud,
+  main.login .cloud {
     width: 300px;
     height: 70px;
   }
-  main.connexion .cloud:before, main.login .cloud:before {
+  main.connexion .cloud:before,
+  main.login .cloud:before {
     width: 120px;
     height: 120px;
     top: -80px;
@@ -1335,7 +1371,7 @@ div.mangaPage svg.liked {
 }
 .head-profile div:first-child figure .change-picture {
   color: var(--fc-black);
-  background-color: #F2EBE8;
+  background-color: #f2ebe8;
 }
 .head-profile div:first-child figure .change-picture:hover {
   background-color: #fcc8e1;
@@ -2256,6 +2292,27 @@ button:hover {
   border: 1px solid #ccc;
   padding: 10px;
   text-align: left;
+}
+.dashboard th select.status-borrow,
+.dashboard td select.status-borrow {
+  padding: 5px;
+  border-radius: 5px;
+}
+.dashboard th .status-borrow option[value=PENDING],
+.dashboard td .status-borrow option[value=PENDING] {
+  background-color: orange;
+}
+.dashboard th .status-borrow option[value=APPROVED],
+.dashboard td .status-borrow option[value=APPROVED] {
+  background-color: green;
+  color: white;
+}
+.dashboard th .status-borrow option[value=REJECTED],
+.dashboard th .status-borrow option[value=LATE],
+.dashboard td .status-borrow option[value=REJECTED],
+.dashboard td .status-borrow option[value=LATE] {
+  background-color: red;
+  color: white;
 }
 .dashboard th {
   background-color: #cc392b;
