--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -22,7 +22,7 @@ body {
   box-sizing: border-box;
   scroll-behavior: smooth;
   min-height: 100vh;
-  background-color: #fddfdf;
+  background-color: var(--primacy-clr-light);
 }
 
 img {
@@ -214,7 +214,7 @@ svg {
 }
 
 .p-all-2 {
-  padding: .5vh 2vh;
+  padding: 1vw;
 }
 
 .flexcenter {
@@ -1063,38 +1063,29 @@ button {
 }
 
 .category-slider {
-  background-color: #85650b41;
-  border-radius: 50px;
-  margin: 5vh 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  margin: 10% 3%;
 
   .category-title {
-    width: 100%;
     display: flex;
     justify-content: space-between;
-    
-    
 
     a {
+      margin: 8% 3%;
       font-family: var(--ff-barlow);
       color: var(--fc-black);
       border: #231b19 1px solid;
       padding: 5px 10px;
-      margin: 3vh 5vh;
       transition: all ease 0.3s;
 
       &:hover {
         color: #cc392b;
-        border: #cc392b 2px solid;
+        border: #cc392b 1px solid;
       }
     }
 
     h2 {
-      margin:  3vh 5vh;
       text-align: justify;
+      margin: 8% 3%;
       font-family: var(--ff-bangers);
       letter-spacing: var(--letter-spacing);
     }
@@ -1105,7 +1096,7 @@ button {
     overflow: hidden;
     width: 100%;
     max-width: 800px;
-    margin: 3vh auto;
+    margin: auto;
 
     .slider-wrapper {
       display: flex;
@@ -1146,9 +1137,7 @@ button {
         }
 
         img {
-          width: 30vh;
-          height: 45vh;
-          object-fit: cover;
+          width: 100%;
           transition: all 0.5s ease;
         }
       }
@@ -2756,7 +2745,7 @@ figure.update-user-desktop {
 }
 
 .headkakkoii {
-  height: 30vh;
+  height: 60vh;
   background: url(../img/kakoii.svg) no-repeat center center/cover;
   width: 100%;
  
@@ -2779,7 +2768,7 @@ align-items: center;
   h1{
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
-    font-size: 1rem;
+    font-size: 2rem;
     color: #f0f0f0;
     text-shadow: 
                 -1px -1px 0 red,  
@@ -2795,7 +2784,7 @@ align-items: center;
     margin: 20px auto;
 
     h2 {
-      color: #0555EB;
+      color: red;
       font-family: var(--ff-bangers);
       letter-spacing: var(--letter-spacing);
       font-size: 1rem;
@@ -2821,23 +2810,38 @@ align-items: center;
         background-color: #cc1606;
 }
   }
-  
-}
-.close-popup{
-    background-color: #0555EB;
-    color: #0e0e0e;
+  .close-popup{
+    background-color: #0b7cec;
+    color:var(--fc-light);
     font-family: var(--ff-bangers);
+    letter-spacing: var(--letter-spacing);
     cursor: pointer;
     transition: all ease 0.3s;
     border-radius: 10px;
     border: none;
     padding: 20px;
-    margin: 10px;
+    width: 100%;
+    font-size: 1.1rem;
     &:hover{
-      background-color: #210be2;
-      text-align: center;
+      background-color: #2d1ccc;
+      align-items: center;
     }
   }
+  h3{
+    font-family: var(--ff-bangers);
+    letter-spacing: var(--letter-spacing);
+    font-size: 1rem;
+    color: #f70707;
+    }
+    input{
+      display: flex;
+      justify-content: center;
+    }
+    .form-group{
+      padding: 10px;
+    }
+    }
+
 /*
 **********************************
 ***********404********************
@@ -2992,64 +2996,9 @@ h2{
 
 
 
-/*
-**********************************
-********ANIMATION HOMEPAGE********
-**********************************
-*/
 
-.wrap {
-  overflow: hidden;
-  position:fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  height: 120px;
-  width: 100%;
-}
-.bgWave {
-  position: absolute;
-  left: 0;
-  width: 200%;
-  height: 100%;
-  background-repeat: repeat;
-  background-position: left bottom;
-  transform-origin: left bottom;
-  
-}
-.waveOne {
-  background-image: url(../img/wave.svg);
-  animation: wave 12s linear infinite;
-}
-.waveTwo {
-  background-image: url(../img/wave.svg);
-  animation: wave-reverse 6s linear infinite;
-  right: 0;
-  left: auto;
-}
-@keyframes wave {
-    0% {
-        transform: translateX(0)
-    }
-    50% {
-        transform: translateX(-25%)
-    }
-    100% {
-        transform: translateX(-50%)
-    }
-}
-@keyframes wave-reverse {
-    0% {
-        transform: translateX(0) scaleY(1)
-    }
-    50% {
-        transform: translateX(25%) scaleY(0.55)
-    }
-    100% {
-        transform: translateX(50%) scaleY(1)
-    }
-}
+
+
 
 
 
