--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -94,6 +94,9 @@ body.dark-mode {
   background-color: #202024;
   color: white;
 
+  label {
+    color: #0e0e0e;
+  }
   .resaux-sociaux {
     a {
       svg {
@@ -2076,19 +2079,18 @@ button:hover {
 ***********kakoii mode***********
 *******************************
 */
-.formkakoii{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.headkakkoii {
-width: 100%;
-height: auto;
- 
-}
-.kakkoii{
-    width: 70vh; 
+  .formkakoii {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .headkakkoii {
+    width: 100%;
+    height: auto;
+  }
+  .kakkoii {
+    width: 70vh;
   }
 }
 
@@ -2714,22 +2716,32 @@ height: auto;
     display: block;
     /* Afficher lorsque actif */
   }
-
-  /*
+}
+form {
+  fieldset {
+    height: 20rem;
+    width: fit-content;
+    overflow-y: scroll;
+    label {
+      input[type="checkbox"] {
+        color: #0e0e0e;
+      }
+    }
+  }
+} /*
 *******************************
 ***********kakoii mode***********
 *******************************
 */
-  .kakkoii {
-    center {
-      max-width: 600px; /* Réduire la largeur maximale */
-      padding: 20px; /* Ajuster le padding si nécessaire */
-      margin: 20px auto; /* Centrer les éléments */
-      background-color: #cc1606;
-    }
+
+.kakkoii {
+  center {
+    max-width: 600px; /* Réduire la largeur maximale */
+    padding: 20px; /* Ajuster le padding si nécessaire */
+    margin: 20px auto; /* Centrer les éléments */
+    background-color: #cc1606;
   }
 }
-
 .headkakkoii {
   height: 60vh;
   background: url(../img/kakoii.svg) no-repeat center center/cover;
@@ -2754,11 +2766,7 @@ height: auto;
     letter-spacing: var(--letter-spacing);
     font-size: 2rem;
     color: #f0f0f0;
-    text-shadow: 
-                -1px -1px 0 red,  
-                1px -1px 0 red,
-                -1px 1px 0 red,
-                1px 1px 0 red;
+    text-shadow: -1px -1px 0 red, 1px -1px 0 red, -1px 1px 0 red, 1px 1px 0 red;
   }
   .center {
     text-align: center;
@@ -2793,9 +2801,9 @@ height: auto;
       background-color: #cc1606;
     }
   }
-  .close-popup{
+  .close-popup {
     background-color: #0b7cec;
-    color:var(--fc-light);
+    color: var(--fc-light);
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
     cursor: pointer;
@@ -2805,25 +2813,25 @@ height: auto;
     padding: 20px;
     width: 100%;
     font-size: 1.1rem;
-    &:hover{
+    &:hover {
       background-color: #2d1ccc;
       align-items: center;
     }
   }
-  h3{
+  h3 {
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
     font-size: 1rem;
     color: #f70707;
-    }
-    input{
-      display: flex;
-      justify-content: center;
-    }
-    .form-group{
-      padding: 10px;
-    }
-    }
+  }
+  input {
+    display: flex;
+    justify-content: center;
+  }
+  .form-group {
+    padding: 10px;
+  }
+}
 
 /*
 **********************************
@@ -2958,77 +2966,6 @@ height: auto;
     cursor: pointer;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*
 **********************************
