--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -159,6 +159,7 @@ body.dark-mode {
     border: #ffffff 1px solid;
     padding: 5px 10px;
     transition: all ease 0.3s;
+
     &:hover {
       color: #cc392b;
       border: #cc392b 1px solid;
@@ -168,6 +169,7 @@ body.dark-mode {
   .logo-footer img {
     content: url(../img/logo_footer.svg);
   }
+
   .logo img {
     content: url(../img/logo_dark_theme.svg);
   }
@@ -188,8 +190,10 @@ body.dark-mode {
       width: 100%;
       color: white;
     }
+
     li {
       transition: all 0.3s ease;
+
       &:hover {
         background-color: #cc392b;
       }
@@ -231,6 +235,7 @@ svg {
 
   .test {
     display: flex;
+
     input {
       color: #333;
       width: 7vh;
@@ -355,7 +360,7 @@ svg {
 **********************************
 */
 
-footer > p {
+footer>p {
   margin-bottom: 1%;
   padding: 0 20px;
 }
@@ -365,14 +370,17 @@ footer > p {
 
   a {
     width: 100%;
+
     svg {
       width: 5vh;
       height: 5vh;
       margin-right: 1vw;
+
       path {
         transition: all ease 0.3s;
       }
     }
+
     &:hover {
       path {
         fill: #cc392b;
@@ -457,6 +465,7 @@ footer > p {
       background-color: #cc1606;
     }
   }
+
   .loginconnexion {
     background-color: #cc392b;
     color: white;
@@ -852,6 +861,7 @@ main.login {
   .red-background {
     background-color: var(--primary-clr-red);
   }
+
   .black-background {
     background-color: #38383f;
   }
@@ -1202,6 +1212,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: start;
+
   h2 {
     font-size: 1rem;
   }
@@ -1213,17 +1224,21 @@ button {
     justify-content: center;
     font-family: var(--ff-barlow);
     font-weight: 400;
+
     figure {
       width: fit-content;
       margin: 0 auto;
+
       img {
         width: 20vh;
       }
     }
+
     hr {
       margin: 2% auto;
       width: 80%;
     }
+
     p {
       margin: auto;
       width: 80%;
@@ -1232,6 +1247,7 @@ button {
       a {
         color: #cc1606;
         transition: all ease 0.3s;
+
         &:hover {
           color: #fab1d4;
         }
@@ -1356,11 +1372,13 @@ div.mangaPage {
   padding-right: 10px;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+
   h2 {
     margin-top: 40vh;
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
   }
+
   hr {
     margin: 2vh 0;
   }
@@ -1461,6 +1479,7 @@ div.mangaPage {
   .all-volume {
     margin-top: 5vh;
     display: flex;
+
     h2 {
       display: flex;
       flex-direction: column;
@@ -1496,6 +1515,7 @@ div.mangaPage {
     font-size: 1.5rem;
     margin: 2vh 0;
   }
+
   .head-edit-profile {
     position: relative;
     width: 100%;
@@ -1543,6 +1563,7 @@ div.mangaPage {
       .change-picture {
         color: var(--fc-black);
         background-color: #f2ebe8;
+
         &:hover {
           background-color: #fcc8e1;
         }
@@ -1584,6 +1605,7 @@ div.mangaPage {
   margin-top: 25vh;
   margin-bottom: 5vh;
   color: var(--fc-light);
+
   h3 {
     margin: 2vh 0;
     font-family: var(--ff-bangers);
@@ -1612,6 +1634,7 @@ div.mangaPage {
           &:hover {
             color: #fcc8e1;
           }
+
           span {
             font-size: 2rem;
             font-weight: 600;
@@ -1773,6 +1796,7 @@ button:hover {
 
     figure {
       width: 20vh;
+
       img {
         width: 100%;
       }
@@ -1871,6 +1895,7 @@ button:hover {
       margin: 0 10vw;
       background-color: rgba(255, 255, 255, 0.568);
       border-radius: 10px;
+
       span {
         float: left;
         padding: 10px 20px;
@@ -1950,9 +1975,11 @@ button:hover {
   flex-direction: column;
   justify-content: center;
 }
+
 .loup-search {
   display: flex;
 }
+
 #search-results-mobile,
 #search-results-desktop {
   width: 110%;
@@ -1969,11 +1996,13 @@ button:hover {
         font-weight: bold;
         margin-right: 1vh;
       }
+
       a {
         color: #0e0e0e;
         margin: 1vh 0;
         font-family: var(--ff-barlow);
         transition: all 0.3s ease;
+
         &:hover {
           color: #cc392b;
         }
@@ -1989,6 +2018,7 @@ button:hover {
 */
 
 @media (min-width: 600px) {
+
   /*
 **********************************
 ***********LOGIN/REGISTER************
@@ -2035,6 +2065,7 @@ button:hover {
 }
 
 @media (min-width: 768px) {
+
   /*
 **********************************
 ***********LOGIN/REGISTER************
@@ -2090,16 +2121,19 @@ button:hover {
     justify-content: center;
     align-items: center;
   }
+
   .headkakkoii {
     width: 100%;
     height: auto;
   }
+
   .kakkoii {
     width: 70vh;
   }
 }
 
 @media (min-width: 1024px) {
+
   /*
 **********************************
 ***********CAROUSSEL************
@@ -2113,6 +2147,7 @@ button:hover {
       width: 20%;
       height: 10%;
     }
+
     p {
       margin: 1%;
       font-size: 1.5rem;
@@ -2191,10 +2226,12 @@ button:hover {
       color: var(--fc-black);
 
       transition: all 0.3s ease;
+
       &:hover {
         color: #cc392b;
       }
     }
+
     a {
       img {
         width: 10vh;
@@ -2343,6 +2380,7 @@ button:hover {
   .category-slider {
     margin: 2% 3%;
   }
+
   .category-slider .slider {
     max-width: 1400px;
     /* Augmente la largeur du slider */
@@ -2360,6 +2398,7 @@ button:hover {
       width: 40%;
     }
   }
+
   /*
 *******************************
 ***********kakoii mode***********
@@ -2371,9 +2410,11 @@ button:hover {
     justify-content: center;
     align-items: center;
   }
+
   .headkakkoii {
     width: 100%;
   }
+
   main.kakkoii {
     width: 70vh;
 
@@ -2449,12 +2490,15 @@ button:hover {
     input {
       width: 30%;
     }
+
     button {
       width: 30%;
     }
   }
+
   figure.update-user-desktop {
     display: block;
+
     img {
       width: 100%;
       object-fit: contain;
@@ -2477,9 +2521,21 @@ button:hover {
       height: 40vh;
     }
   }
+  /*
+**********************************
+***********CART*******************
+**********************************
+*/
+
+.cartgrid{
+  display: flex;
+  justify-content: center;
+}
 }
 
+
 @media (min-width: 1440px) {
+
   /*
 **********************************
 ***********LOGIN/REGISTER************
@@ -2729,9 +2785,12 @@ button:hover {
 */
   .kakkoii {
     center {
-      max-width: 600px; /* Réduire la largeur maximale */
-      padding: 20px; /* Ajuster le padding si nécessaire */
-      margin: 20px auto; /* Centrer les éléments */
+      max-width: 600px;
+      /* Réduire la largeur maximale */
+      padding: 20px;
+      /* Ajuster le padding si nécessaire */
+      margin: 20px auto;
+      /* Centrer les éléments */
       background-color: #cc1606;
     }
   }
@@ -2742,6 +2801,7 @@ button:hover {
   background: url(../img/kakoii.svg) no-repeat center center/cover;
   width: 100%;
 }
+
 .kakkoii {
   display: flex;
   flex-direction: column;
@@ -2763,6 +2823,7 @@ button:hover {
     color: #f0f0f0;
     text-shadow: -1px -1px 0 red, 1px -1px 0 red, -1px 1px 0 red, 1px 1px 0 red;
   }
+
   .center {
     text-align: center;
     border: 2px solid #ffffff;
@@ -2776,6 +2837,7 @@ button:hover {
       letter-spacing: var(--letter-spacing);
       font-size: 1rem;
     }
+
     p {
       font-family: var(--ff-barlow);
       font-size: 1rem;
@@ -2792,10 +2854,12 @@ button:hover {
     border: none;
     padding: 20px;
     margin: 10px;
+
     &:hover {
       background-color: #cc1606;
     }
   }
+
   .close-popup {
     background-color: #0b7cec;
     color: var(--fc-light);
@@ -2808,21 +2872,25 @@ button:hover {
     padding: 20px;
     width: 100%;
     font-size: 1.1rem;
+
     &:hover {
       background-color: #2d1ccc;
       align-items: center;
     }
   }
+
   h3 {
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
     font-size: 1rem;
     color: #f70707;
   }
+
   input {
     display: flex;
     justify-content: center;
   }
+
   .form-group {
     padding: 10px;
   }
@@ -2835,63 +2903,83 @@ button:hover {
 */
 .backgroundimage {
   position: relative;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 0, 0, 1) 0%,
-    rgb(138, 20, 20) 50%,
-    rgba(153, 0, 0, 1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgb(138, 20, 20) 50%,
+      rgba(153, 0, 0, 1) 100%);
   height: 100vh;
-  background-size: cover; /* Assurez-vous que l'image couvre tout l'arrière-plan */
-  background-position: 0% 0%; /* Position initiale de l'arrière-plan */
-  overflow: hidden; /* Empêcher le défilement */
+  background-size: cover;
+  /* Assurez-vous que l'image couvre tout l'arrière-plan */
+  background-position: 0% 0%;
+  /* Position initiale de l'arrière-plan */
+  overflow: hidden;
+  /* Empêcher le défilement */
 
   .content {
     text-align: center;
-    position: relative; /* Positionner le texte par rapport à l'élément parent */
-    z-index: 2; /* Assurez-vous que le contenu est au-dessus des shurikens */
-    top: 50%; /* Centrer verticalement */
-    left: 50%; /* Centrer horizontalement */
-    transform: translate(-50%, -50%); /* Ajuster pour centrer parfaitement */
-    color: white; /* Couleur du texte */
-    font-family: var(--ff-barlow); /* Police de caractères */
+    position: relative;
+    /* Positionner le texte par rapport à l'élément parent */
+    z-index: 2;
+    /* Assurez-vous que le contenu est au-dessus des shurikens */
+    top: 50%;
+    /* Centrer verticalement */
+    left: 50%;
+    /* Centrer horizontalement */
+    transform: translate(-50%, -50%);
+    /* Ajuster pour centrer parfaitement */
+    color: white;
+    /* Couleur du texte */
+    font-family: var(--ff-barlow);
+    /* Police de caractères */
     padding: 20px;
-    background-color: rgba(
-      0,
-      0,
-      0,
-      0.5
-    ); /* Fond semi-transparent pour améliorer la lisibilité */
+    background-color: rgba(0,
+        0,
+        0,
+        0.5);
+    /* Fond semi-transparent pour améliorer la lisibilité */
     border-radius: 10px;
-    max-width: 600px; /* Limiter la largeur maximale */
-    width: auto; /* Utiliser la largeur automatique */
-    margin: 0 auto; /* Centrer horizontalement */
-    display: inline-block; /* Réduire la largeur au contenu */
-    backdrop-filter: blur(10px); /* Ajouter un flou au fond */
+    max-width: 600px;
+    /* Limiter la largeur maximale */
+    width: auto;
+    /* Utiliser la largeur automatique */
+    margin: 0 auto;
+    /* Centrer horizontalement */
+    display: inline-block;
+    /* Réduire la largeur au contenu */
+    backdrop-filter: blur(10px);
+    /* Ajouter un flou au fond */
   }
 
   .shuriken {
-    height: 10vw; /* Ajustez la hauteur selon vos besoins */
-    width: 10vw; /* Ajustez la largeur selon vos besoins */
-    position: absolute; /* Pour permettre le positionnement */
-    z-index: 1; /* Positionner les shurikens derrière le contenu */
+    height: 10vw;
+    /* Ajustez la hauteur selon vos besoins */
+    width: 10vw;
+    /* Ajustez la largeur selon vos besoins */
+    position: absolute;
+    /* Pour permettre le positionnement */
+    z-index: 1;
+    /* Positionner les shurikens derrière le contenu */
   }
 
   .shuriken.top {
-    top: 10px; /* Positionner en haut */
+    top: 10px;
+    /* Positionner en haut */
     left: 50%;
     transform: translateX(-50%);
   }
 
   .shuriken.bottom {
-    bottom: 10px; /* Positionner en bas */
+    bottom: 10px;
+    /* Positionner en bas */
     left: 50%;
     transform: translateX(-50%);
   }
+
   .button {
     color: rgb(230, 10, 10);
     font-weight: 400;
   }
+
   h1 {
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
@@ -2916,7 +3004,8 @@ button:hover {
 
 .kakkoii {
   .popup {
-    display: none; /* Masquer par défaut */
+    display: none;
+    /* Masquer par défaut */
     position: fixed;
     left: 50%;
     top: 50%;
@@ -2930,7 +3019,8 @@ button:hover {
   }
 
   .overlay {
-    display: none; /* Masquer par défaut */
+    display: none;
+    /* Masquer par défaut */
     position: fixed;
     top: 0;
     left: 0;
@@ -2942,18 +3032,22 @@ button:hover {
 
   .popup.active,
   .overlay.active {
-    display: block; /* Afficher lorsque actif */
+    display: block;
+    /* Afficher lorsque actif */
   }
+
   .flex {
     display: flex;
     flex-direction: column;
   }
+
   h2 {
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
     font-size: 1rem;
     color: #fa0707;
   }
+
   .open-popup {
     background-color: #fcc8e1;
     color: #0e0e0e;
@@ -2984,6 +3078,7 @@ button:hover {
   svg {
     width: 4vh;
     height: 4vh;
+
     path {
       transition: all 0.3s ease;
     }
@@ -3006,6 +3101,7 @@ button:hover {
   height: 120px;
   width: 100%;
 }
+
 .bgWave {
   position: absolute;
   left: 0;
@@ -3015,35 +3111,113 @@ button:hover {
   background-position: left bottom;
   transform-origin: left bottom;
 }
+
 .waveOne {
   background-image: url(../img/wave.svg);
   animation: wave 12s linear infinite;
 }
+
 .waveTwo {
   background-image: url(../img/wave.svg);
   animation: wave-reverse 6s linear infinite;
   right: 0;
   left: auto;
 }
+
 @keyframes wave {
   0% {
     transform: translateX(0);
   }
+
   50% {
     transform: translateX(-25%);
   }
+
   100% {
     transform: translateX(-50%);
   }
 }
+
 @keyframes wave-reverse {
   0% {
     transform: translateX(0) scaleY(1);
   }
+
   50% {
     transform: translateX(25%) scaleY(0.55);
   }
+
   100% {
     transform: translateX(50%) scaleY(1);
   }
+}
+
+
+/*
+**********************************
+***********CART*******************
+**********************************
+*/
+
+
+.pagecart {
+
+
+
+  .form-cart {
+    margin: 2rem;
+  }
+
+  .panier {
+    height: 60vh;
+    background: url(../img/panier\ \(1\).webp) no-repeat center center/cover;
+    width: 100%;
+  }
+
+  .cartbutton {
+    width: 100%;
+    padding: 5px;
+    background-color: #FCC8E1;
+    color: #141414;
+    border-radius: 5px;
+    border: solid 2px #3333339f;
+    font-size: 1.5rem;
+    font-family: var(--ff-barlow);
+    transition: all ease 0.3s;
+
+    &:hover {
+      background-color: #cc1606;
+
+    }
+  }
+
+  H1 {
+    font-family: var(--ff-bangers);
+    letter-spacing: var(--letter-spacing);
+    font-size: 2rem;
+    color: #070707;
+    margin-left: 20px;
+
+  }
+
+  p {
+    font-family: var(--ff-barlow);
+    font-size: 1.5rem;
+    color: #070707;
+  }
+
+  .trash {
+    width: 2vh;
+    height: 2vh;
+  }
+
+  .battle {
+    display: block;
+    margin: 2rem auto;
+    /* Centrer l'image horizontalement */
+    max-width: 100%;
+  }
+.gap{
+  margin: 20px;
+}
 }
