--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2699,6 +2699,10 @@ button:hover {
     z-index: 1000;
   }
 
+  .popup.hidden {
+    display: none;
+  }
+
   .overlay {
     display: none;
     /* Masquer par défaut */
