--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2047,6 +2047,7 @@ button:hover {
     height: 10vh;
   }
   .menu-desktop {
+    padding: 0.5rem;
     display: block;
   }
   .menu-desktop figure:nth-of-type(1) a img {
