--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2842,7 +2842,7 @@ form fieldset label input[type=checkbox] {
   100% {
     transform: translateX(50%) scaleY(1);
   }
-
+}
 /*
 **********************************
 ***********CART*******************
@@ -2853,7 +2853,7 @@ form fieldset label input[type=checkbox] {
 }
 .pagecart .panier {
   height: 60vh;
-  background: url(../img/panier\ \(1\).webp) no-repeat center center/cover;
+  background: url("../img/panier (1).webp") no-repeat center center/cover;
   width: 100%;
 }
 .pagecart .cartbutton {
