--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -3296,7 +3296,7 @@ form {
 
   .panier {
     height: 60vh;
-    background: url(../img/panier\ \(1\).webp) no-repeat center center/cover;
+    background: url('../img/panier\ \(1\).webp') no-repeat center center/cover;
     width: 100%;
   }
 
